--- a/design-cms/index.html
+++ b/design-cms/index.html
@@ -122,14 +122,10 @@
 				<span>E</span>
 				<span>W</span>
 				<span class="space"></span>
-				<span>F</span>
+				<span>P</span>
 				<span>O</span>
-				<span>R</span>
+				<span>S</span>
 				<span>T</span>
-				<span>R</span>
-				<span>E</span>
-				<span>S</span>
-				<span>S</span>
 			</h1>
 			<div class="row">
 				<div class="image">
